--- a/Week 1 Practice Exercises.ipynb
+++ b/Week 1 Practice Exercises.ipynb
@@ -99,15 +99,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-33-208990bec860>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-1-4ce7bbf54595>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-33-208990bec860>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    def getString (input())\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-4ce7bbf54595>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    def getString (input())\u001b[0m\n\u001b[1;37m                        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -115,7 +115,8 @@
     "class string:\n",
     "    def getString (input())\n",
     "    def printString (print(str))\n",
-    "    "
+    "    \n",
+    "    hnhh"
    ]
   },
   {
@@ -131,6 +132,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
