Update Week 1 Practice Exercises.ipynb

--- a/Week 1 Practice Exercises.ipynb
+++ b/Week 1 Practice Exercises.ipynb
@@ -116,7 +116,9 @@
     "    def getString (input())\n",
     "    def printString (print(str))\n",
     "    123\n",
-    "    hnhh"
+    "    hnhh\n",
+    "    125\n",
+    "    "
    ]
   },
   {
