Update Week 1 Practice Exercises.ipynb

--- a/Week 1 Practice Exercises.ipynb
+++ b/Week 1 Practice Exercises.ipynb
@@ -123,6 +123,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "print (math.sqrt(100))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
