--- a/Week 1 Practice Exercises.ipynb
+++ b/Week 1 Practice Exercises.ipynb
@@ -77,16 +77,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter values separated by commas:15,25,35,45,65\n",
-      "['15', '25', '35', '45', '65']\n",
-      "('15', '25', '35', '45', '65')\n"
+      "Enter values separated by commas:15,25,35\n",
+      "['15', '25', '35']\n",
+      "('15', '25', '35')\n"
      ]
     }
    ],
@@ -115,36 +115,75 @@
     "class string:\n",
     "    def getString (input())\n",
     "    def printString (print(str))\n",
-    "    123\n",
-    "    hnhh\n",
-    "    125\n",
+    "    ????\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.0\n"
+      "Enter a value or values separated by commas: 15,25,35\n",
+      "7,9,10,"
      ]
     }
    ],
    "source": [
     "import math\n",
-    "print (math.sqrt(100))"
+    "a = input('Enter a value or values separated by commas: ')\n",
+    "D = a.split(',')\n",
+    "i = 0\n",
+    "H = 30\n",
+    "C = 50\n",
+    "while(D!=0 and i<len(D)):\n",
+    "    Q = math.sqrt((2 * C * int(D[i]))/H)\n",
+    "    print (int(Q), end =\",\")\n",
+    "    i=i+1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a value for the row: 5\n",
+      "Enter a value for the column: 5\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-20-b32d28a186ea>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m         \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m         \u001b[0ma\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m         \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mend\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m' '\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "from array import*\n",
+    "\n",
+    "x = input ('Enter a value for the row: ')\n",
+    "y = input (\"Enter a value for the column: \")\n",
+    "i = 0\n",
+    "j = 0\n",
+    "a = [i][j]\n",
+    "for i in range(int(x)-1):\n",
+    "    for j in range(int(y)-1):\n",
+    "        a[i][j] = i*j\n",
+    "        print (a[i][j], end=' ')"
+   ]
   }
  ],
  "metadata": {
