--- a/Week 1 Practice Exercises.ipynb
+++ b/Week 1 Practice Exercises.ipynb
@@ -16,6 +16,7 @@
     }
    ],
    "source": [
+    "#1\n",
     "x=2000\n",
     "while (x<3200):\n",
     "    if (x%7==0 and x%5!=0):\n",
@@ -40,6 +41,7 @@
     }
    ],
    "source": [
+    "#2\n",
     "x = input(\"Enter a value: \")\n",
     "y = int (x)\n",
     "z = int (x)\n",
@@ -65,6 +67,7 @@
     }
    ],
    "source": [
+    "#3\n",
     "x =input(\"Enter a value: \")\n",
     "y = int (x)\n",
     "z = {}\n",
@@ -91,6 +94,7 @@
     }
    ],
    "source": [
+    "#4\n",
     "x = input ('Enter values separated by commas:')\n",
     "a = x.split(\",\")\n",
     "print (a)\n",
@@ -112,6 +116,7 @@
     }
    ],
    "source": [
+    "#5\n",
     "class string:\n",
     "    def getString (input())\n",
     "    def printString (print(str))\n",
@@ -134,6 +139,7 @@
     }
    ],
    "source": [
+    "#6\n",
     "import math\n",
     "a = input('Enter a value or values separated by commas: ')\n",
     "D = a.split(',')\n",
@@ -172,6 +178,7 @@
     }
    ],
    "source": [
+    "#7\n",
     "from array import*\n",
     "\n",
     "x = input ('Enter a value for the row: ')\n",
@@ -200,6 +207,7 @@
     }
    ],
    "source": [
+    "#8\n",
     "a=input(\"Enter words seppaated by commas: \")\n",
     "y=a.split(',')\n",
     "y.sort()\n",
@@ -208,21 +216,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a sentence: dsf ds fds\n",
-      "DSF DS FDS\n"
+      "Enter a sentence: muie\n",
+      "MUIE\n"
      ]
     }
    ],
    "source": [
+    "#9\n",
     "a = input(\"Enter a sentence: \")\n",
-    "print (a.upper())"
+    "print (a.upper()) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a sentence asd asdzxc cz xa asd\n",
+      "['asd', 'asdzxc', 'cz', 'xa']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#10\n",
+    "a = input(\"Enter a sentence \")\n",
+    "b = set(a.split(' '))\n",
+    "print(sorted(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter binarry numbers sepparated by commas: 0100, 0011, 1010, 1001\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "int() can't convert non-string with explicit base",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-57-26a944602148>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mc\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32mif\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m%\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m==\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m         \u001b[0mint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m         \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: int() can't convert non-string with explicit base"
+     ]
+    }
+   ],
+   "source": [
+    "#11\n",
+    "a = input(\"Enter binarry numbers sepparated by commas: \")\n",
+    "b = a.split(',')\n",
+    "for x in range(len(b)):\n",
+    "    c=int(b[x])\n",
+    "    if(c%5==0):\n",
+    "        int (c, 2)\n",
+    "        print (c)"
    ]
   },
   {
@@ -230,7 +295,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "0100, 0011, 1010, 1001"
+   ]
   }
  ],
  "metadata": {
