--- a/Week 1 Practice Exercises.ipynb
+++ b/Week 1 Practice Exercises.ipynb
@@ -16,7 +16,6 @@
     }
    ],
    "source": [
-    "#1\n",
     "x=2000\n",
     "while (x<3200):\n",
     "    if (x%7==0 and x%5!=0):\n",
@@ -41,7 +40,6 @@
     }
    ],
    "source": [
-    "#2\n",
     "x = input(\"Enter a value: \")\n",
     "y = int (x)\n",
     "z = int (x)\n",
@@ -67,7 +65,6 @@
     }
    ],
    "source": [
-    "#3\n",
     "x =input(\"Enter a value: \")\n",
     "y = int (x)\n",
     "z = {}\n",
@@ -80,21 +77,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter values separated by commas:15,25,35\n",
-      "['15', '25', '35']\n",
-      "('15', '25', '35')\n"
+      "Enter values separated by commas:15,25,35,45,65\n",
+      "['15', '25', '35', '45', '65']\n",
+      "('15', '25', '35', '45', '65')\n"
      ]
     }
    ],
    "source": [
-    "#4\n",
     "x = input ('Enter values separated by commas:')\n",
     "a = x.split(\",\")\n",
     "print (a)\n",
@@ -103,191 +99,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-1-4ce7bbf54595>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-33-208990bec860>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-4ce7bbf54595>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    def getString (input())\u001b[0m\n\u001b[1;37m                        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-33-208990bec860>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    def getString (input())\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "#5\n",
     "class string:\n",
     "    def getString (input())\n",
     "    def printString (print(str))\n",
-    "    ????\n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter a value or values separated by commas: 15,25,35\n",
-      "7,9,10,"
-     ]
-    }
-   ],
-   "source": [
-    "#6\n",
-    "import math\n",
-    "a = input('Enter a value or values separated by commas: ')\n",
-    "D = a.split(',')\n",
-    "i = 0\n",
-    "H = 30\n",
-    "C = 50\n",
-    "while(D!=0 and i<len(D)):\n",
-    "    Q = math.sqrt((2 * C * int(D[i]))/H)\n",
-    "    print (int(Q), end=\",\")\n",
-    "    i=i+1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter a value for the row: 555\n",
-      "Enter a value for the column: 55\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'int' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-8294288a3a0a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m         \u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m         \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m' '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not subscriptable"
-     ]
-    }
-   ],
-   "source": [
-    "#7\n",
-    "from array import*\n",
-    "\n",
-    "x = input ('Enter a value for the row: ')\n",
-    "y = input (\"Enter a value for the column: \")\n",
-    "i = 0\n",
-    "j = 0\n",
-    "a = [i][j]\n",
-    "for i in range(int(x)-1):\n",
-    "    for j in range(int(y)-1):\n",
-    "        a[i][j] = i*j\n",
-    "        print (a[i][j], end=' ')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter words seppaated by commas: das,hgf,abv,gfd,uyt\n",
-      "['abv', 'das', 'gfd', 'hgf', 'uyt']\n"
-     ]
-    }
-   ],
-   "source": [
-    "#8\n",
-    "a=input(\"Enter words seppaated by commas: \")\n",
-    "y=a.split(',')\n",
-    "y.sort()\n",
-    "print(y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter a sentence: muie\n",
-      "MUIE\n"
-     ]
-    }
-   ],
-   "source": [
-    "#9\n",
-    "a = input(\"Enter a sentence: \")\n",
-    "print (a.upper()) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter a sentence asd asdzxc cz xa asd\n",
-      "['asd', 'asdzxc', 'cz', 'xa']\n"
-     ]
-    }
-   ],
-   "source": [
-    "#10\n",
-    "a = input(\"Enter a sentence \")\n",
-    "b = set(a.split(' '))\n",
-    "print(sorted(b))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter binarry numbers sepparated by commas: 0100, 0011, 1010, 1001\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "int() can't convert non-string with explicit base",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-57-26a944602148>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mc\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32mif\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m%\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m==\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m         \u001b[0mint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m         \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: int() can't convert non-string with explicit base"
-     ]
-    }
-   ],
-   "source": [
-    "#11\n",
-    "a = input(\"Enter binarry numbers sepparated by commas: \")\n",
-    "b = a.split(',')\n",
-    "for x in range(len(b)):\n",
-    "    c=int(b[x])\n",
-    "    if(c%5==0):\n",
-    "        int (c, 2)\n",
-    "        print (c)"
    ]
   },
   {
@@ -295,9 +123,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "0100, 0011, 1010, 1001"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -305,18 +131,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.1"
   }
  },
  "nbformat": 4,
