--- a/Week 1 Practice Exercises.ipynb
+++ b/Week 1 Practice Exercises.ipynb
@@ -444,7 +444,7 @@
     }
    ],
    "source": [
-    "#18 \n",
+    "#18 ?\n",
     "a = []\n",
     "x = input(\"Enter passwords: \").split(',')\n",
     "s = \"$#@\"\n",
@@ -469,25 +469,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Enter values sepparated by commas: Tom,19,80\n",
       "Enter values sepparated by commas: John,20,90\n",
+      "Enter values sepparated by commas: Jony,17,91\n",
+      "Enter values sepparated by commas: Jony,17,93\n",
+      "Enter values sepparated by commas: Json,21,85\n",
       "Enter values sepparated by commas: \n",
-      "[('John', '20', '90')]\n"
+      "[('John', '20', '90'), ('Jony', '17', '91'), ('Jony', '17', '93'), ('Json', '21', '85'), ('Tom', '19', '80')]\n"
      ]
     }
    ],
    "source": [
-    "#Tom,19,80\n",
-    "#John,20,90\n",
-    "#Jony,17,91\n",
-    "#Jony,17,93\n",
-    "#Json,21,85\n",
     "#19\n",
     "import operator\n",
     "l = []\n",
@@ -498,7 +497,12 @@
     "    else:\n",
     "        l.append((a[0],a[1],a[2]))\n",
     "l.sort(key = operator.itemgetter(0, 1, 2))\n",
-    "print (l)"
+    "print (l)\n",
+    "#Tom,19,80\n",
+    "#John,20,90\n",
+    "#Jony,17,91\n",
+    "#Jony,17,93\n",
+    "#Json,21,85"
    ]
   },
   {
@@ -526,7 +530,6 @@
     "            yield i\n",
     "n = int(input('Enter a value: '))\n",
     "b = seven(n)\n",
-    "print (b)\n",
     "for i in b:\n",
     "    print(i)"
    ]
